--- a/NIMBUS_AIRLINE_BACKEND/nimbus/nimbus/src/main/resources/application.properties
+++ b/NIMBUS_AIRLINE_BACKEND/nimbus/nimbus/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # ============================================
 # FILE LOCATION: airline-backend/src/main/resources/application.properties
-# UPDATED: Removed hardcoded credentials for security
+# UPDATED: Added SQL initialization settings
 # ============================================
 
 # ===========================
@@ -13,10 +13,11 @@ server.port=8080
 # IMPORTANT: Change these values before deployment!
 # ===========================
 spring.datasource.url=jdbc:mysql://localhost:3306/airline_db
-spring.profiles.active=local
 spring.datasource.username=root
 spring.datasource.password=YOUR_PASSWORD_HERE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.profiles.active=local
+
 
 # ===========================
 # JPA/Hibernate Configuration
@@ -25,7 +26,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# ===========================
+# SQL Initialization (IMPORTANT for auto-updating dates)
+# ===========================
+# Always run data.sql on startup to update flight dates
 spring.sql.init.mode=always
+# Defer initialization until after JPA creates tables
+spring.jpa.defer-datasource-initialization=true
+# Continue even if some SQL statements fail
+spring.sql.init.continue-on-error=false
 
 # ===========================
 # Application Configuration
