--- a/NIMBUS_AIRLINE_BACKEND/nimbus/nimbus/src/main/resources/application.properties
+++ b/NIMBUS_AIRLINE_BACKEND/nimbus/nimbus/src/main/resources/application.properties
@@ -12,11 +12,10 @@ server.port=8080
 # Database Configuration
 # IMPORTANT: Change these values before deployment!
 # ===========================
-spring.datasource.url=jdbc:mysql://localhost:3306/airline_db
-spring.datasource.username=root
-spring.datasource.password=YOUR_PASSWORD_HERE
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.profiles.active=local
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
 
 
 # ===========================
